--- a/Baha'i/Others/ROB/V4/p033-049Ch03.html
+++ b/Baha'i/Others/ROB/V4/p033-049Ch03.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p011-032Ch02.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p050-072Ch04.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -125,11 +125,11 @@
 	   * vol. 2, p. <a href="../V2/p236-269Ch11.html#p265">265</a>.<p>
 	   <hr>
 	   8. Letter dated 4 November 1931.<p>
-	   9. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para393">pp. 139</a>-40.<p>
+	   9. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para393">pp. 139</a>-40.<p> 
 	   10. <a href="../../../Baha/TOB/p001-270TOB.html#para393"><i>ibid</i></a>.
 	   <hr>
 	   [the 'learned in Bahá'] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para173">&para;173</a>
-
+	   
 	   </small></td>
 </tr>
 <tr>
@@ -138,7 +138,7 @@
 	   <b>The Origin of Creation</b><p>
 	   The Tablet of Hikmat reveals some of the mysteries of God's creation. In one of His Tablets,<small><sup>11</sup></small> Bahá'u'lláh states that in each verse of the Tablet of Hikmat an ocean is concealed. In answer to a question by Nabíl-i-Akbar concerning the origin of creation, Bahá'u'lláh reveals these words:<p>
 	   <blockquote>As regards thine assertions about the beginning of creation, this is a matter on which conceptions vary by reason of the divergences in men's thoughts and opinions. Wert thou to assert that it hath ever existed and shall continue to exist, it would be true; or wert thou to affirm the same concept as is mentioned in the sacred Scriptures, no doubt would there be about it, for it hath been revealed by God, the Lord of the worlds. Indeed He was a hidden treasure. This is a station that can never be described nor even alluded to. And concerning the question, 'I did wish to make Myself known'; there was God, and His creation had ever existed beneath His shelter from the beginning that hath no beginning, apart from its being preceded by a Firstness which cannot be regarded as firstness and originated by a Cause inscrutable even unto all men of learning.<small><sup>12</sup></small></blockquote>
-	   There are some profound statements in the above passage. Bahá'u'lláh describes two well-known concepts concerning the origin of creation. One is that creation has always existed and that it has no beginning nor will have an end. The other relates to a <i>hadíth</i> (Tradition) of Islám in which the voice of God proclaims, 'I was a hidden treasure, I wished to make Myself known, so I created man that I might be known.'† Bahá'u'lláh explains that
+	   There are some profound statements in the above passage. Bahá'u'lláh describes two well-known concepts concerning the origin of creation. One is that creation has always existed and that it has no beginning nor will have an end. The other relates to a <i>hadíth</i> (Tradition) of Islám in which the voice of God proclaims, 'I was a hidden treasure, I wished to make Myself known, so I created man that I might be known.'† Bahá'u'lláh explains that 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p39">39</a></center><p>
@@ -153,32 +153,32 @@
        <td>
 	   these two concepts in the above passage are in reality the same. Bahá'u'lláh and 'Abdu'l-Bahá in many of their Tablets have asserted that creation has existed from the beginning that has no beginning. Since God is eternal and has always existed and will continue to exist till the end that has no end, so His creation has also existed from eternity. It is impossible to imagine that there was a time when 'nothingness' had an existence. For there can be no such thing as absolute non-existence.<p>
 	   The other concept, that God was a hidden treasure and created man in order to make Himself known, seems to imply an interval without a creation. Such a concept is tantamount to saying that there was a time when God was devoid of His attribute 'the Creator'. Bahá'u'lláh in the Tablet of Hikmat rejects this theory and confirms that creation had no beginning. He says: '...There was God, and His creation had ever existed beneath His shelter from the beginning that hath no beginning...'<p>
-	   Having established this basic truth, He describes the beginning of creation 'being preceded by a Firstness which cannot be regarded as firstness...' In these words Bahá'u'lláh makes a distinction between the eternity of God and the eternity of His creation. The existence of God is not preceded by a cause whereas creation has come into being through a cause. 'Abdu'l-Bahá has explained* that creation emanates from God, and that it does not come about through incarnation. The difference between emanation and incarnation can be explained by the following examples: A book emanates from the author. But no part of the author can be said to be a part of his book, and so he does not incarnate himself in his creation. On the other hand, a seed manifests itself in its creation which is the tree, its branches and its fruits. In this case we note that the seed has become part of the tree. Another example is the sun and its rays. The rays emanate from the sun. It does not break up into pieces to form the rays. It is the same with God and His creation. The creation emanates from God. It has not come into being through incarnation, for if it had, then God would have to be a part of creation, and this
+	   Having established this basic truth, He describes the beginning of creation 'being preceded by a Firstness which cannot be regarded as firstness...' In these words Bahá'u'lláh makes a distinction between the eternity of God and the eternity of His creation. The existence of God is not preceded by a cause whereas creation has come into being through a cause. 'Abdu'l-Bahá has explained* that creation emanates from God, and that it does not come about through incarnation. The difference between emanation and incarnation can be explained by the following examples: A book emanates from the author. But no part of the author can be said to be a part of his book, and so he does not incarnate himself in his creation. On the other hand, a seed manifests itself in its creation which is the tree, its branches and its fruits. In this case we note that the seed has become part of the tree. Another example is the sun and its rays. The rays emanate from the sun. It does not break up into pieces to form the rays. It is the same with God and His creation. The creation emanates from God. It has not come into being through incarnation, for if it had, then God would have to be a part of creation, and this 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p40">40</a></center><p>
-	   * see <i>Some Answered Questions</i>, ch. 53 and 54.
+	   * see <i>Some Answered Questions</i>, ch. <a href="../../../AB/SAQ/p175-260Part4.html#p202">53</a> and <a href="../../../AB/SAQ/p175-260Part4.html#p205">54</a>.
 	   </small></td>
 </tr>
 <tr>
        <td>
 	   would immediately reduce Him to the state of a finite being.<p>
-	   Having established that creation emanates from God, we note a similarity between the sun and its rays. 'Abdu'l-Bahá has spoken about this, as recorded in <i>Some Answered Questions</i>:<p>
+	   Having established that creation emanates from God, we note a similarity between the sun and its rays. 'Abdu'l-Bahá has spoken about this, as recorded in <i>Some Answered Questions</i>:<p> 
 	   <blockquote>Though the rays are always inseparable from the sun, nevertheless, the sun is preexistent and the rays are phenomenal, for the existence of the rays depends upon that of the sun. But the existence of the sun does not depend upon that of the rays, for the sun is the giver and the rays are the gift.<small><sup>13</sup></small></blockquote>
 	   Similarly creation cannot be dissociated from God, and the two exist together. But God is pre-existent and self-subsisting. He is exalted above firstness or lastness or time, whereas creation is preceded by a cause. It is 'preceded by a firstness which cannot be regarded as firstness and originated by a Cause inscrutable even unto all men of learning'.<p>
 	   The relationship between God and His creation is explained by 'Abdu'l-Bahá in these words:<p>
-	   <blockquote>Therefore, though the world of contingency exists, in relation to the existence of God it is nonexistent and nothingness. Man and dust both exist, but how great the difference between the existence of the mineral and that of man! The one in relation to the other is nonexistence. In the same way, the existence of creation in relation to the existence of God is nonexistence.<small><sup>14</sup></small></blockquote>
+	   <blockquote>Therefore, though the world of contingency exists, in relation to the existence of God it is nonexistent and nothingness. Man and dust both exist, but how great the difference between the existence of the mineral and that of man! The one in relation to the other is nonexistence. In the same way, the existence of creation in relation to the existence of God is nonexistence.<small><sup>14</sup></small></blockquote> 
 	   In the <i>Lawh-i-'Abdu'l-Vahháb</i> revealed in 'Akká Bahá'u'lláh speaks about the immortality of the soul. Of its existence in the spiritual worlds of God He reveals these words:<p>
 	   <blockquote>Such an existence is a contingent and not an absolute existence, inasmuch as the former is preceded by a cause, whilst the latter is independent thereof. Absolute existence is strictly confined to God, exalted be His glory.<small><sup>15</sup></small></blockquote>
-	   In the Tablet of Hikmat Bahá'u'lláh confirms that creation had always existed but not in the same form. These are His words:<p>
+	   In the Tablet of Hikmat Bahá'u'lláh confirms that creation had always existed but not in the same form. These are His words:<p> 
 	   <blockquote>That which hath been in existence had existed before, but not in the form thou seest today.<small><sup>16</sup></small></blockquote>
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p41">41</a></center><p>
 	   <hr>
-	   13. <i>Some Answered Questions</i>, ch. 80, p. 280.<p>
-	   14. <i>ibid</i>. p. 281.<p>
-	   15. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#LXXXI">LXXXI</a>, p. 157.<p>
+	   13. <i>Some Answered Questions</i>, ch. 80, <a href="../../../AB/SAQ/p261-306Part5.html#para60">p. 280</a>.<p> 
+	   14. <i>ibid</i>. <a href="../../../AB/SAQ/p261-306Part5.html#para62">p. 281</a>.<p>
+	   15. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#LXXXI">LXXXI</a>, p. 157.<p> 
 	   16. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para395">p. 140</a>.
 	   </small></td>
 </tr>
@@ -209,7 +209,7 @@
 	   Bahá'u'lláh in the Tablet of Hikmat has disclosed to mankind the mystery of the creative power of God. He has imparted the knowledge of the origin of creation. He thus affirms:<p>
 	   <blockquote>Every event must needs have an origin and every building a builder. Verily the Word of God is the cause which hath preceded the contingent world...<small><sup>22</sup></small></blockquote>
 	   But in the same way that man is unable to know the essence of God, he is also unable to understand the process by which the Word of God has brought creation into being. Of the sacred nature of the Word, Bahá'u'lláh reveals in the Tablet of Hikmat:<p>
-	   <blockquote>Know thou, moreover, that the Word of God--exalted be His glory--is higher and far superior to that which the senses can perceive, for it is sanctified from any property or</blockquote>
+	   <blockquote>Know thou, moreover, that the Word of God--exalted be His glory--is higher and far superior to that which the senses can perceive, for it is sanctified from any property or</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p43">43</a></center><p>
@@ -246,7 +246,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p45">45</a></center><p>
 	   <hr>
-	   24. <i>Some Answered Questions</i>, ch. 53, p. 203.<p>
+	   24. <i>Some Answered Questions</i>, ch. 53, <a href="../../../AB/SAQ/p175-260Part4.html#para64">p. 203</a>.<p> 
 	   25. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para400">p. 142</a>.
 	   </small></td>
 </tr>
@@ -295,7 +295,7 @@
 	   <hr>
 	   29. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para420">pp. 148</a>-9.
 	   <hr>
-	   ["Thou knowest full well..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="p368-390Ch24.html#p373">p. 373</a>
+	   ["Thou knowest full well..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="p368-390Ch24.html#p373">p. 373</a>	   
 	   </small></td>
 </tr>
 <tr>
@@ -316,7 +316,7 @@
        <td>
 	   	   <FORM ACTION="p011-032Ch02.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -324,12 +324,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p050-072Ch04.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
