--- a/Baha'i/Others/ROB/V4/p145-160Ch09.html
+++ b/Baha'i/Others/ROB/V4/p145-160Ch09.html
@@ -144,6 +144,9 @@
 	   * Refers to <i>Qur'án</i> 55:72. (A.T.)
 	   <hr>
 	   6. <i>Kitábu'l-Fará'id</i>, pp. 492-3. An edited version of a translation made by Dr Kházeh Fanánápazir.
+	   <hr>
+	   <a href="../../../Baha/KI/Cover.html"><i>Kitáb-i-Íqán</i></a><p>
+	   <a href="../../../AB/SAQ/Cover.html"><i>Some Answered Questions</i></a>
 	   </small></td>
 </tr>
 <tr>
@@ -234,7 +237,7 @@
 	   15. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#para422">CIII</a>.<p>
 	   16. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para365">p. 129</a>.<p>
 	   <hr>
-	   ["O people of Bahá..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p089-102Supp.html#p91">p. 91</a>
+	   ["O people of Bahá..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p089-102Supp.html#p91">p. 91</a>	   
 	   </small></td>
 </tr>
 <tr>
@@ -250,7 +253,7 @@
 	   17. <i>Nafahát-i-Quds</i>, pp. 5-8.<p>
 	   <hr>
 	   ["Select ye a single language..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para189">&para;189</a><p>
-	   ["The third Glad-Tidings..."] <a href="../../../Baha/TOB/p001-270TOB.html#para46"><i>Bishárát</i></a>
+	   ["The third Glad-Tidings..."] <a href="../../../Baha/TOB/p001-270TOB.html#para46"><i>Bishárát</i></a> 	    	   
 	   </small></td>
 </tr>
 <tr>
