--- a/Baha'i/Others/ROB/V4/p463-485Index.html
+++ b/Baha'i/Others/ROB/V4/p463-485Index.html
@@ -145,7 +145,7 @@
 	   'Abdu'r-Rahím-i-Qannád, <a href= "../V4/p011-032Ch02.html#p23">23</a><p>
 	   Abhá Kingdom, <a href= "../V4/p033-049Ch03.html#p34">34</a>, <a href= "../V4/p214-226Ch15.html#p223">223</a><p>
 	   Abhar, <a href= "../V4/p294-314Ch20.html#p305">305</a><p>
-	   Abraham (Ibráhím), <a href= "../V4/p011-032Ch02.html#p31">31</a>, <a href= "../V4/p315-328Ch21.html#p324">324</a>, <a href= "../V4/p425-428Apndx_I.html#p425">425</a>, <a href= "../V4/p432-440Apndx_III.html#p435">435</a><p>
+	   <a name="Abraham">Abraham</a> (Ibráhím), <a href= "../V4/p011-032Ch02.html#p31">31</a>, <a href= "../V4/p315-328Ch21.html#p324">324</a>, <a href= "../V4/p425-428Apndx_I.html#p425">425</a>, <a href= "../V4/p432-440Apndx_III.html#p435">435</a><p>
 	   Abú-'Alí Síná, <a href= "../V4/p432-440Apndx_III.html#p434">434</a><p>
 	   Abú-Dhar, <a href= "../V4/p432-440Apndx_III.html#p433">433</a><p>
 	   Abú-Nasr, <a href= "../V4/p432-440Apndx_III.html#p434">434</a><p>
@@ -705,7 +705,7 @@
 	   education of, <a href= "../V4/p145-160Ch09.html#p159">159</a>, <a href= "../V4/p329-350Ch22.html#p341">341</a><br>
 	   suffering of, <a href= "../V4/p091-102Ch06.html#p93">93</a><br>
 	   </blockquote>
-	   Christ Jesus, <a href= "../V4/p050-072Ch04.html#p56">56</a>-7, <a href= "../V4/p315-328Ch21.html#p324">324</a>-5<p>
+	   <a name="Christ">Christ</a> Jesus, <a href= "../V4/p050-072Ch04.html#p56">56</a>-7, <a href= "../V4/p315-328Ch21.html#p324">324</a>-5<p>
 	   <blockquote>
 	   historicity of, <a href= "../V4/p257-273Ch18.html#p265">265</a><br>
 	   reality of, <a href= "../V4/p145-160Ch09.html#p152">152</a>, <a href= "../V4/p257-273Ch18.html#p267">267</a><br>
@@ -1949,7 +1949,7 @@
 	   Sleep, <a href= "../V4/p205-213Ch14.html#p206">206</a><p>
 	   Society, <a href= "../V4/p190-204Ch13.html#p196">196</a>-9, <a href= "../V4/p190-204Ch13.html#p203">203</a>, <a href= "../V4/p329-350Ch22.html#p341">341</a><p>
 	   Socrates, <a href= "../V4/p033-049Ch03.html#p46">46</a><p>
-	   <i>Some Answered Questions</i> ('Abdu'l-Bahá), <a href= "../V4/p033-049Ch03.html#p41">41</a>, <a href= "../V4/p033-049Ch03.html#p45">45</a>, <a href= "../V4/p145-160Ch09.html#p152">152</a><p>
+	   <a name="SomeAnsweredQuestions"><i>Some Answered Questions</i></a> ('Abdu'l-Bahá), <a href= "../V4/p033-049Ch03.html#p41">41</a>, <a href= "../V4/p033-049Ch03.html#p45">45</a>, <a href= "../V4/p145-160Ch09.html#p152">152</a><p>
 	   <a name="Soul">Soul</a>, <a href= "../V4/p145-160Ch09.html#p158">158</a>, <a href= "../V4/p177-189Ch12.html#p188">188</a>, <a href= "../V4/p190-204Ch13.html#p201">201</a>, <a href= "../V4/p227-238Ch16.html#p234">234</a>, <a href= "../V4/p227-238Ch16.html#p237">237</a>, <a href= "../V4/p239-256Ch17.html#p251">251</a><p>
 	   <blockquote>
 	   equal status of, <a href= "../V4/p190-204Ch13.html#p203">203</a>-4<br>
