--- a/Baha'i/Others/ROB/V4/p441-445Biblio.html
+++ b/Baha'i/Others/ROB/V4/p441-445Biblio.html
@@ -38,7 +38,7 @@
 	   'ABDU'L-BAHÁ. <i>Memorials of the Faithful</i>. Translated from the original Persian text and annotated by Marzieh Gail. Wilmette, Illinois: Bahá'í Publishing Trust, 1971.<p>
 	   <blockquote>
 	   <i>Selections from the Writings of 'Abdu'l-Bahá</i>. Compiled by the Research Department of the Universal House of Justice; translated by a Committee at the Bahá'í World Centre and by Marzieh Gail. Haifa: Bahá'í World Centre, 1978.<p>
-	   <i>Some Answered Questions</i>. Collected and Translated from the Persian of 'Abdu'l-Bahá by Laura Clifford Barney. London: Kegan Paul, Trench, Trubner & Co. Ltd., 1908. Chicago: Bahá'í Publishing Society, 1918. London: Bahá'í Publishing Trust, 1961. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn 1982.<p>
+	   <a href="../../../AB/SAQ/Cover.html"><i>Some Answered Questions</i></a>. Collected and Translated from the Persian of 'Abdu'l-Bahá by Laura Clifford Barney. London: Kegan Paul, Trench, Trubner & Co. Ltd., 1908. Chicago: Bahá'í Publishing Society, 1918. London: Bahá'í Publishing Trust, 1961. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn 1982.<p>
 	   </blockquote>
 	   ABU'L-FADL, MÍRZÁ. <i>Kitábu'l-Fará'id</i>. An apologia. Cairo, undated. Written in AH 1315 (AD 1897).<p>
 	   ALÁ'Í 'ABDU'L-'ALÍ. <i>Mu'assisiy-i-Ayádíy-i-Amru'lláh</i> (The Institution of The Hands of the Cause of God). Tihrán: Bahá'í Publishing Trust, BE 130 (AD 1973).<p>
