--- a/Baha'i/AB/SAQ/p001-080Part1.html
+++ b/Baha'i/AB/SAQ/p001-080Part1.html
@@ -23,7 +23,7 @@
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="^" NAME=up>
 		   </FORM>
-		   <FORM ACTION="../../../../index.html" METHOD=GET>
+		   <FORM ACTION="../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
 		   </FORM>		   
 	   </td>
@@ -2348,7 +2348,7 @@
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="^" NAME=up>
 		   </FORM>
-		   <FORM ACTION="../../../../index.html" METHOD=GET>
+		   <FORM ACTION="../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
 		   </FORM>		   
 	   </td>
