--- a/Baha'i/AB/SAQ/p261-306Part5.html
+++ b/Baha'i/AB/SAQ/p261-306Part5.html
@@ -23,7 +23,7 @@
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="^" NAME=up>
 		   </FORM>
-		   <FORM ACTION="../../../../index.html" METHOD=GET>
+		   <FORM ACTION="../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
 		   </FORM>		   
 	   </td>
@@ -1165,7 +1165,7 @@ Misc. References:<p>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="^" NAME=up>
 		   </FORM>
-		   <FORM ACTION="../../../../index.html" METHOD=GET>
+		   <FORM ACTION="../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
 		   </FORM>		   
 	   </td>
