--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<h4><a href="Baha'i/Baha/TOB/Cover.html">Tablets of Bahá'u'lláh</a></h4>
 			</blockquote>
 
-<h3><b><i>'Abu'l-Bahá</i></b></h3>
+<h3><b><i>'Abdu'l-Bahá</i></b></h3>
 			<blockquote>
 			<h4><a href="Baha'i/AB/SAQ/Cover.html">Some Answered Questions</a></h4>
 			</blockquote>
