--- a/Baha'i/AB/SAQ/Foreword.html
+++ b/Baha'i/AB/SAQ/Foreword.html
@@ -19,7 +19,7 @@
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="^" NAME=up>
 		   </FORM>
-		   <FORM ACTION="../../../index.html" METHOD=GET>		   
+		   <FORM ACTION="../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
 		   </FORM>		   
 	   </td>
@@ -182,7 +182,8 @@
 	As interlocutor, Miss Barney arranged for one of 'Abdu'l-Bahá's sons-in-law, or for one of the three distinguished Persians of His secretariat of that period, to be present during the talks to insure accuracy in recording His replies to the questions asked Him. 'Abdu'l-Bahá later read the transcriptions, sometimes changing a word or a line with His reed pen. They were later translated into English by Miss Barney The original Persian texts are today a part of the Bahá'í archives of Haifa. For additional commentary on this work, refer to Shoghi Effendi's statements in <i>God Passes By</i>, pages 107, 260, 268, 305 and 383.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<i>God Passes By</i>, pages <a href="../../SE/GPB/p087-234SecondPeriod.html#para43">107</a>, <a href="../../SE/GPB/p235-320ThirdPeriod.html#para48">260</a>, <a href="../../SE/GPB/p235-320ThirdPeriod.html#para63">268</a>, <a href="../../SE/GPB/p235-320ThirdPeriod.html#para142">305</a>, <a href="../../SE/GPB/p321-401FourthPeriod.html#para41">347</a>, <a href="../../SE/GPB/p321-401FourthPeriod.html#para119">381</a>, and <a href="../../SE/GPB/p321-401FourthPeriod.html#para123">383</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -283,7 +284,7 @@
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="^" NAME=up>
 		   </FORM>
-		   <FORM ACTION="../../../index.html" METHOD=GET>		   
+		   <FORM ACTION="../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
 		   </FORM>		   
 	   </td>
