--- a/Baha'i/AB/SAQ/p001-080Part1.html
+++ b/Baha'i/AB/SAQ/p001-080Part1.html
@@ -436,7 +436,8 @@
 	Since the exile of Abraham from Ur to Aleppo in Syria produced this result, we must consider what will be the effect of the exile of Bahá'u'lláh in His several removes from Tihrán to Baghdád, from thence to Constantinople, to Rumelia and to the Holy Land.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para43">p. 107</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -785,7 +786,8 @@
 	<a href="../../Baha/KA/p258-296Index.html#Báb,the"><i>The Kitáb-i-Aqdas</i></a>;
 	<a href="../../Baha/KI/p271-274Index.html#Báb"><i>The Kitáb-i-Íqán</i></a>;
 	<a href="../../Baha/PM/Index.html#Báb"><i>Prayers and Meditations</i></a>;
-	<a href="../../Baha/TOB/p277-299Index.html#Báb"><i>Tablets of Bahá'u'lláh</i></a> 
+	<a href="../../Baha/TOB/p277-299Index.html#Báb"><i>Tablets of Bahá'u'lláh</i></a>;
+	<i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html">First Period</a>; 
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 
 		   <a href="../../Others/ROB/V1/p351-363Index.html#Báb,The">1</a>, 
 		   <a href="../../Others/ROB/V2/p469-476Index.html#Báb,The">2</a>, 
@@ -844,8 +846,9 @@
 	<a href="../../Baha/KA/p258-296Index.html#Bahá'u'lláh"><i>The Kitáb-i-Aqdas</i></a>;
 	<a href="../../Baha/KI/p271-274Index.html#Bahá'u'lláh"><i>The Kitáb-i-Íqán</i></a>;
 	<a href="../../Baha/PM/Index.html#Bahá'u'lláh"><i>Prayers and Meditations</i></a>;
-	<a href="../../Baha/TOB/p277-299Index.html#Bahá'u'lláh"><i>Tablets of Bahá'u'lláh</i></a>
+	<a href="../../Baha/TOB/p277-299Index.html#Bahá'u'lláh"><i>Tablets of Bahá'u'lláh</i></a>;
 	<i>The Seven Valleys and The Four Valleys</i>, <a href="../../Baha/TSVATFV.html#p16">p. 16</a>, <a href="../../Baha/TSVATFV.html#p20">p. 20</a>, <a href="../../Baha/TSVATFV.html#p29">p. 29</a>, <a href="../../Baha/TSVATFV.html#p43">p. 43</a>, <a href="../../Baha/TSVATFV.html#p59">p. 59</a>;
+	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html">Second Period</a>;
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 
 		   <a href="../../Others/ROB/V1/p351-363Index.html#Bahá'u'lláh">1</a>, 
 		   <a href="../../Others/ROB/V2/p469-476Index.html#Bahá'u'lláh">2</a>, 
