--- a/Baha'i/AB/SAQ/p261-306Part5.html
+++ b/Baha'i/AB/SAQ/p261-306Part5.html
@@ -1149,7 +1149,13 @@ Misc. References:<p>
 ["In 1913 when 'Abdu'l-Bahá visited Paris..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 3, <a href="../../Others/ROB/V3/p174-203Ch09.html#p187">p. 187</a><br>
 ["I was greatly disappointed..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 3, <a href="../../Others/ROB/V3/p322-342Ch15.html#p339">p. 339</a><br>
 ["The subject of creation..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p033-049Ch03.html#p45">p. 45</a><br>
-["This argument put forward..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p145-160Ch09.html#p152">p. 152</a>
+["This argument put forward..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p145-160Ch09.html#p152">p. 152</a><br>
+["No sooner had one of these pilgrims..."] <i>God Passes By</i>, <a href="../../SE/GPB/p235-320ThirdPeriod.html#para48">p. 260</a><br>
+["It was during these troublous times..."] <i>God Passes By</i>, <a href="../../SE/GPB/p235-320ThirdPeriod.html#para63">p. 268</a><br>
+["Equally significant has been..."] <i>God Passes By</i>, <a href="../../SE/GPB/p321-401FourthPeriod.html#para41">p. 347</a><br>
+["No less remarkable has been ..."] <i>God Passes By</i>, <a href="../../SE/GPB/p321-401FourthPeriod.html#para119">p. 381</a><br>
+["The progress made in connection with..."] <i>God Passes By</i>, <a href="../../SE/GPB/p321-401FourthPeriod.html#para123">p. 383</a>
+
 </small>
 
 <p><p>
