--- a/Baha'i/AB/SAQ/p307-324Index.html
+++ b/Baha'i/AB/SAQ/p307-324Index.html
@@ -1261,6 +1261,7 @@ Zoroastrianism, <a href= "../SAQ/p001-080Part1.html#p39">39</a><br>
 	</td>
 	<td VALIGN=top><small>
 	<i>The Kitáb-i-Aqdas</i>, <a href="../../Baha/KA/p258-296Index.html#SomeAnsweredQuestions">Index</a><br>
+	<i>God Passes By</i>, <a href="../../SE/GPB/p413-436Index.html#SomeAnsweredQuestions">Index</a><br>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../../Others/ROB/V3/p467-483Index.html#SomeAnsweredQuestions">3</a>, <a href="../../Others/ROB/V4/p463-485Index.html#SomeAnsweredQuestions">4</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
