--- a/Baha'i/Baha/EW/p183-194Glossary.html
+++ b/Baha'i/Baha/EW/p183-194Glossary.html
@@ -2,7 +2,7 @@
 <!-- Covenant Library: \cl\Baha'i\Baha\EW\p183-194Glossary.html -->
 
 <!-- ISSUES LOG
-
+SIYYID ASHRAF-I-ZANJÁNÍ - Nazir change to Básir
 -->
 
 <html>
@@ -17,7 +17,7 @@
        <td>
 	   	   <FORM ACTION="p001-182.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Cover.html" METHOD=GET>
@@ -30,7 +30,7 @@
        <td>
 	   	   <FORM ACTION="p195-197Index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -151,7 +151,7 @@
 </tr>
 <tr>
        <td><b>'AZÍM</b>
-	   <blockquote>A believer to whom the Báb revealed the name and the advent of Bahá'u'lláh. (God Passes By p. 28)</blockquote></td>
+	   <blockquote>A believer to whom the Báb revealed the name and the advent of Bahá'u'lláh. (<i>God Passes By</i> <a href="../../SE/GPB/p001-086FirstPeriod.html#para47">p. 28</a>)</blockquote></td>
        <td>&nbsp;</td>
        <td VALIGN=top><small><center>&nbsp;</center><p></small></td>
 </tr>
@@ -169,7 +169,7 @@
 </tr>
 <tr>
        <td><b>BADÍ</b>
-	   <blockquote>("Wonderful") Áqá Buzurg of Khurásán, bearer of the Tablet to the Sháh (See God Passes By p. 199).</blockquote></td>
+	   <blockquote>("Wonderful") Áqá Buzurg of Khurásán, bearer of the Tablet to the Sháh (See <i>God Passes By</i> <a href="../../SE/GPB/p087-234SecondPeriod.html#para240">p. 199</a>).</blockquote></td>
        <td>&nbsp;</td>
        <td VALIGN=top><small><center>&nbsp;</center><p></small></td>
 </tr>
@@ -206,7 +206,7 @@
 </tr>
 <tr>
        <td><b>CRIMSON BOOK</b>
-	   <blockquote>Bahá'u'lláh's Book of the Covenant. See <i>God Passes By</i>, p. 238.</blockquote></td>
+	   <blockquote>Bahá'u'lláh's Book of the Covenant. See <i>God Passes By</i>, <a href="../../SE/GPB/p235-320ThirdPeriod.html#para6">p. 238</a>.</blockquote></td>
        <td>&nbsp;</td>
        <td VALIGN=top><small><center>&nbsp;</center><p></small></td>
 </tr>
@@ -455,7 +455,7 @@
 </tr>
 <tr>
        <td><b>MÍRZÁ HUSAYN KHÁN, MUSHÍRU'D-DAWLIH.</b>
-	   <blockquote>The Persian Ambassador at the Sublime Porte through whose influence Bahá'u'lláh was transferred from Baghdad to Constantinople. (God Passes By, pp. 146 and 159). </blockquote></td>
+	   <blockquote>The Persian Ambassador at the Sublime Porte through whose influence Bahá'u'lláh was transferred from Baghdad to Constantinople. (<i>God Passes By</i>, pp. <a href="../../SE/GPB/p087-234SecondPeriod.html#para119">146</a>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para146">159</a>). </blockquote></td>
        <td>&nbsp;</td>
        <td VALIGN=top><small><center>&nbsp;</center><p></small></td>
 </tr>
@@ -509,7 +509,7 @@
 </tr>
 <tr>
        <td><b>MULLÁ 'ALÍ-JÁN</b>
-	   <blockquote>A believer of Mázindarán: martyred in Tihrán. (God Passes By, p. 201)</blockquote></td>
+	   <blockquote>A believer of Mázindarán: martyred in Tihrán. (<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para244">p. 201</a>)</blockquote></td>
        <td>&nbsp;</td>
        <td VALIGN=top><small><center>&nbsp;</center><p></small></td>
 </tr>
@@ -521,7 +521,7 @@
 </tr>
 <tr>
        <td><b>NAJAF-'ALÍ</b>
-	   <blockquote>One of the 44 survivors of Zanján who were brought to Tihrán and all of them executed save Najaf 'Alí, on whom an officer took pity. But some years later he was arrested again and beheaded. (See God Passes By, p. 178)</blockquote></td>
+	   <blockquote>One of the 44 survivors of Zanján who were brought to Tihrán and all of them executed save Najaf 'Alí, on whom an officer took pity. But some years later he was arrested again and beheaded. (See <i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para190">p. 178</a>)</blockquote></td>
        <td>&nbsp;</td>
        <td VALIGN=top><small><center>191</center><p></small></td>
 </tr>
@@ -647,7 +647,7 @@
 </tr>
 <tr>
        <td><b>SIYYID ASHRAF-I-ZANJÁNÍ</b>
-	   <blockquote>Martyred with 'Abá Nazir (See God Passes By, p. 199 and Gleanings from the Writings of Bahá'u'lláh, <a href="../GL/p003-346.html#LXIX">p. 135</a>)</blockquote></td>
+	   <blockquote>Martyred with 'Abá Básir (See <i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para241">p. 199</a> and <i>Gleanings from the Writings of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#LXIX">p. 135</a>)</blockquote></td>
        <td>&nbsp;</td>
        <td VALIGN=top><small><center>193</center><p></small></td>
 </tr>
@@ -730,7 +730,7 @@
        <td>
 	   	   <FORM ACTION="p001-182.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Cover.html" METHOD=GET>
@@ -743,7 +743,7 @@
        <td>
 	   	   <FORM ACTION="p195-197Index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
