--- a/Baha'i/Baha/EW/p195-197Index.html
+++ b/Baha'i/Baha/EW/p195-197Index.html
@@ -225,9 +225,10 @@
 	   </td>
        <td></td>
        <td valign="TOP">
-	   <small><center><a name="p195">195</a><p>
+	   <small><center><a name="p195">195</a></center><p>
+	   <i>God Passes By</i>, <a href="../../SE/GPB/p413-436Index.html#EpistletotheSonoftheWolf">Index</a><p>  
 	   <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#ESW">Index</a>, vol. 2 <a href="../../Others/ROB/V2/p469-476Index.html#ESW">Index</a>, vol. 3 <a href="../../Others/ROB/V3/p467-483Index.html#ESW">Index</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#ESW">Index</a></a>
-	   </center><p></small></td>
+	   </small></td>
 	   </small>
 </tr>
 </table>
